tests/ui/feature-gates/feature-gate-large-assignments.stderr
error[E0658]: the `#[move_size_limit]` attribute is an experimental feature
  --> $DIR/feature-gate-large-assignments.rs:3:1
   |
LL | #![move_size_limit = "42"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #83518 <https://github.com/rust-lang/rust/issues/83518> for more information
   = help: add `#![feature(large_assignments)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
